--- a/dashboard/style/section.css
+++ b/dashboard/style/section.css
@@ -1,32 +1,33 @@
 main > section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--background);
 }
 
 main > section header {
-    padding: 0 2rem;
-    width: 100%;
+  padding: 0 2rem;
+  width: 100%;
 }
 
 main > section h2 {
-    color: var(--white);
-    font-size: 36px;
-    text-align: center;
+  color: var(--white);
+  font-size: 36px;
+  text-align: center;
 }
 
 main > section:nth-child(1) {
-    background: #2472A6;
+  --background: #2472a6;
 }
 
 main > section:nth-child(2) {
-    background: #dea931;
+  --background: #dea931;
 }
 
 main > section:nth-child(3) {
-    background: #F26766;
+  --background: #f26766;
 }
 
 main > section:nth-child(4) {
-    background: #4ca74b;
+  --background: #4ca74b;
 }
